# healthpilot

./: .env.example  AGENTS.md  README.md  pyproject.toml
.codex/skills/medication-history-report/: SKILL.md
.codex/skills/profile-question-report/: SKILL.md
.codex/skills/root-cause-analysis/: SKILL.md
.codex/skills/what-next-report/: SKILL.md
image-assets/: manifest.json
image-assets/web-seo/: site.webmanifest
src/health_agent/: cli.py  selfdecode.py
src/healthpilot/: __init__.py  __main__.py  actions.py  cli.py  constants.py  evidence.py  evidence_packet.py  issues.py  jsonio.py  lifestyle.py  paths.py  profile.py  selfdecode.py
tests/: test_cli.py
