[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "healthpilot"
version = "0.1.0"
description = "Local file-based workflows for unresolved health issue tracking and action planning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
healthpilot = "healthpilot.cli:main"

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
